# nlp_engine

./: .clang-format  .clang-format-ignore  .envrc  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  LICENSE  dev.sh  readme.md
.github/workflows/: ci.yml  docs.yml
cmake/: vcpkg.json.in
data/: dictionary_de.txt  dictionary_en.txt  dictionary_fr.txt  sentiment_negative.txt  sentiment_positive.txt  stopwords_de.txt  stopwords_en.txt  stopwords_fr.txt  toxic_words.txt
data/models/: generic_novel.json
data/training/: generic_novel_source.txt  novel_source.txt
examples/clicksimple/: README.md  pyproject.toml
examples/clicksimple/src/clicksimple/: cli.py  textgen.py
examples/fastapi/backend/: main.py  pyproject.toml
examples/fastapi/client/: build.ts
examples/fastapi/client/src/: App.tsx  index.css  index.html  index.ts
examples/fastapi/client/src/components/: About.tsx  Dashboard.tsx  DocumentPanel.tsx  Header.tsx  Icon.tsx  Sidebar.tsx  StatsDashboard.tsx
examples/fastapi/client/src/components/analysis/: AnalysisDashboard.tsx
examples/fastapi/client/src/components/header/: MarkovDropdown.tsx  SystemDropdown.tsx  ToolkitDropdown.tsx
examples/fastapi/client/src/components/ui/: Dropdown.tsx  Toggle.tsx  Tooltip.tsx
examples/fastapi/client/src/hooks/: useTheme.ts
examples/fastapi/client/src/models/: document.ts
examples/fastapi/client/src/services/: nlp-service.ts
examples/simple/: main.cpp
examples/train/: main.cpp  textgen.cpp  train.cpp
nlp/: nlp_addon_system.hh  nlp_engine.cpp  nlp_engine.h  nlp_engine.hh  nlp_engine_async.cpp  nlp_engine_async.hh  nlp_engine_wrapper.cpp
nlp/addons/: dedupe_addon.hh  fractal_addon.hh  markov_addon.hh  onnx_addon.hh  vector_addon.hh
nlp/addons/onnx/: onnx_service.hh
scripts/: download_models.py  fetch_training_data.py
tests/: test_fractal_addon.cpp  test_nlp.cpp  test_nlp_async.cpp  test_nlp_classifier.cpp  test_nlp_engine_slots.cpp  test_nlp_graph.cpp  test_nlp_linguistics.cpp  test_nlp_markov.cpp  test_nlp_onnx.cpp  test_nlp_onnx_embed.cpp  test_nlp_onnx_integration.cpp  test_nlp_onnx_tokenizer.cpp  test_nlp_unicode.cpp
tests/integration/: test_dedupe_direct.py
training/: nlp_trainer.cpp
