[project]
name = "clicksimple"
version = "0.1.0"
description = "Simple NLP CLI tool"
readme = "README.md"
authors = [
    { name = "pce", email = "info@pc-e.org" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
]

[project.scripts]
clicksimple = "clicksimple.cli:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
